# dockertest

./: Dockerfile  README.rst  dockertest.ini  pyproject.toml  requirements-dev.txt  requirements.txt
src/dockertest/: wsgi.py
tests/: test_dockertest.py
