[tool.poetry]
name = "dockertest"
version = "0.1.0"
description = ""
authors = ["Josh West <18324+joshmaker@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
uwsgi = "^2.0.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
